force-app/main/default/objects/Question_Criteria__c/Question_Criteria__c.object-meta.xml
<CustomObject>
    <label>Clarity Form Question Criteria</label>
    <nameField>
        <label>Clarity Form Question Criteria Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clarity Form Question Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>