force-app/main/default/objects/Question_Criteria__c/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <label>Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Equals</fullName>
            </value>
            <value>
                <fullName>Greater than</fullName>
            </value>
            <value>
                <fullName>Less than</fullName>
            </value>
            <value>
                <fullName>Is Greater than or equal to</fullName>
            </value>
            <value>
                <fullName>Is Less than or equal to</fullName>
            </value>
            <value>
                <fullName>Is not</fullName>
            </value>
            <value>
                <fullName>Is Not Null</fullName>
            </value>
            <value>
                <fullName>Not Equal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>