force-app/main/default/objects/Question_Criteria__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <label>Clarity Form Question</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipLabel>Question Criteria</relationshipLabel>
    <relationshipName>Question_Criteria</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>